# Cod-Bioinformatics

./: .Rhistory  .gitignore
AtlanticCod-Bioinformatics/: _config.yml
AtlanticCod-Bioinformatics/_posts/: 2021-03-17-welcome-to-jekyll.markdown
PracticeGenomes/Practice/: Pop3_18304.1.html  Pop3_18304.1.json  barcodeFilei52_i79.txt
notebook/: 20200317_StacksNotes.md  20200507_QualityTrimmingNotes.md  20200901_alignmentNotes  20201007_Pre&PostStacksExample.md  20201014_JonP_suggestions.md  20201014_rescueFlagTest.md  20201112_BWAtest  20210115_AlignmentResults  20210115_AlignmentResults.md  20210120_sortIndexNotes  20210214_samExample.md  20210214_samFiltering.md  20210215_bedtoolsCov.md  20210215_freeBayesQuestions.md  20210215_samtoolsCov.md  20210217_filteringVCF.md  20210223_freebayesShobanaEmail.md  20210228_picardNotes.md  20210301_filteringStep.md  20210313_mergeNotes  20210315_SNPfiltering  20210315_SNPfiltering.md  20210317_LDdecay.md  20210405_freebayesNotes.md  20210414_FreebayesNotesForKatie.md  20210415_SampleNotes.md  20210429_bedtoolsVCFcoverage.md  20210430_LDdecay.md  20210630_thinnedSNPs_outlierAnalysis.md  Katie's LD code.md  PearNotes.md  ToDo-Bioinformatics.md  atlanticCodProject.xlsx  evaluateCoverage.md  submit.bash
scripts/: .Rhistory  Stacks_FileCreate.Rmd  plotCoverage.R  subsetBedtoolsCov.R  subsetBedtoolsCov_update.R  subsetCodGFFfile.R  trim_jobSubmit.R
scripts/Alignment/: bedtools_alnCheck.R  bedtools_awkChromosomes  bedtools_generateSubFile.R  bwa_generateSubFiles.R  plotSubmit.sh  samtoolsAlnCheck_generateSubFiles.R  samtoolsAlnCheck_outputs.R  samtoolsIndexBam_generateSubFiles.R  samtools_AlignCheck
scripts/Filter/: VCFfilterBcftools.R  bcftoolsFilterVCF.R  samtoolsFilter_generateSubFile.R  samtoolsFilter_test_generateSubFile.R
scripts/LD_decay/: LD_analysis.R  geno_ld_window_50-50_AtlanticCod.geno.ld  submit_LDanalysis.sh
scripts/QualityTrim/: SampleNewNames.Rmd  fastP_createSlurmFiles.R  fastp_generateSubFiles.R  trim_jobSubmit.R
scripts/SNPThinning/: SNP_thinning.R
scripts/Stacks/: Stacks_FileCreate.Rmd  stacksTest.sh  stacks_i51_i71.sh  stacks_i51_i72.sh  stacks_i51_i73.sh  stacks_i52_i74.sh  stacks_i52_i75.sh  stacks_i52_i76.sh  stacks_i52_i79.sh  stacks_i53_i76.sh  stacks_i53_i77.sh  stacks_i53_i78.sh  stacks_i53_i79.sh  stacks_i54_i710.sh  stacks_i54_i711.sh  stacks_i54_i712.sh  stacks_i55_i71.sh  stacks_i55_i72.sh  stacks_i55_i73.sh  stacks_i56_i74.sh  stacks_i56_i75.sh  stacks_i56_i76.sh  stacks_i57_i77.sh  stacks_i57_i78.sh  stacks_i57_i79.sh  stacks_i58_i710.sh  stacks_i58_i711.sh  stacks_i58_i712.sh  stacks_i59_i71.sh  stacks_i59_i72.sh  stacks_i59_i73.sh  stacks_i59_i74.sh  stacks_i59_i75.sh  stacks_i59_i76.sh
scripts/freebayes/: freebayes100kbRun.sh  freebayesExampleBase  freebayes_job_parallel_chrom_regions_merged.sh  freebayes_job_parallel_chrom_regions_sara.sh  freebayes_launcher_regions.sh  freebayes_perChrom.R  regions.txt  vcfCoverageCheck.R
scripts/mergeReads/: IndexMergedFile.sh  mergeBamFiles.R  mergeNotes  mergeTest.sh  pear_createSlurmFiles.R  samtools-merge_n16.sh
scripts/picard/: picardTools_generateSubFile.R  picard_sample.sh
src/: SampleNames.csv  SampleNames.txt  SequencePlateOrder_20200618.csv  SequencePlateOrder_20201016.csv  populationFile.csv  populationFile.numbers  populationFile.txt
src/BWA/: Pop1_16216_submitBWA_JP.sh  Pop5_17273_submitBWA.sh  Pop7_18156_submitBWA_JP.sh  clust_submitJobsBWA.sh  indexCodGenome.sh
src/FastP/: clust_submitJobsFastP.sh
src/alignment/: 20200901_alignmentNotes
src/freebayes/: NC_044051.1_100kbRegions.txt  coverage.txt  coverage150kb.txt  coverage50kb.txt
src/msc/: EditSampleNamesFile.R
src/stacks/: .RData  .Rhistory  Barcode_Sequences.xlsx  (+3 more)
src/stacks-2.53/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  clone_filter  config.h  config.h.in  config.status  configure  configure.ac  cstacks  gstacks  kmer_filter  phasedstacks  populations  process_radtags  process_shortreads  sstacks  tsv2bam  ustacks
src/stacks-2.53/htslib/: Makefile  Makefile.am  Makefile.in
src/stacks-2.53/htslib/.deps/: bcf_sr_sort.Po  bgzf.Po  bgzip.Po  errmod.Po  faidx.Po  hfile.Po  hfile_net.Po  hts.Po  hts_os.Po  htsfile.Po  kfunc.Po  knetfile.Po  kstring.Po  md5.Po  multipart.Po  probaln.Po  realn.Po  regidx.Po  sam.Po  synced_bcf_reader.Po  tabix.Po  tbx.Po  textutils.Po  thread_pool.Po  vcf.Po  vcf_sweep.Po  vcfutils.Po
src/stacks-2.53/htslib/cram/.deps/: cram_codecs.Po  cram_decode.Po  cram_encode.Po  cram_external.Po  cram_index.Po  cram_io.Po  cram_samtools.Po  cram_stats.Po  files.Po  mFILE.Po  open_trace_file.Po  pooled_alloc.Po  rANS_static.Po  sam_header.Po  string_alloc.Po
src/stacks-2.53/htslib/os/.deps/: rand.Po
src/stacks-2.53/scripts/: convert_stacks.pl  count_fixed_catalog_snps.py  denovo_map.pl  ref_map.pl  stacks-count-reads-per-sample-per-locus  stacks-dist-extract  stacks-integrate-alignments  stacks-samtools-tview
src/stacks-2.53/src/: Alignment.h  BamI.cc  BamI.h  BamUnalignedI.h  BowtieI.h  BustardI.h  DNANSeq.cc  DNANSeq.h  DNASeq.cc  DNASeq.h  DNASeq4.cc  DNASeq4.h  FastaI.h  FastqI.h  GappedAln.h  Hwp.cc  Hwp.h  MetaPopInfo.cc  MetaPopInfo.h  PopMap.h  PopSum.cc  PopSum.h  SamI.h  Seq.cc  Seq.h  SuffixTree.cc  SuffixTree.h  Tsv.h  Vcf.cc  Vcf.h  aln_utils.cc  aln_utils.h  bootstrap.h  catalog_utils.cc  catalog_utils.h  clean.cc  clean.h  clone_filter.cc  clone_filter.h  cmb.cc  (+65 more)
src/stacks-2.53/src/.deps/: BamI.Po  DNANSeq.Po  DNASeq.Po  DNASeq4.Po  Hwp.Po  MetaPopInfo.Po  PopSum.Po  Seq.Po  SuffixTree.Po  Vcf.Po  aln_utils.Po  catalog_utils.Po  clean.Po  clone_filter.Po  cmb.Po  constants.Po  cstacks.Po  debruijn.Po  export_formats.Po  file_io.Po  genotype_dictionaries.Po  gstacks.Po  gzFasta.Po  input.Po  kmer_filter.Po  kmers.Po  locus.Po  log_utils.Po  mapping_utils.Po  models.Po  mst.Po  mstack.Po  nucleotides.Po  phasedstacks.Po  populations.Po  process_radtags.Po  process_shortreads.Po  renz.Po  sql_utilities.Po  sstacks.Po  (+5 more)
src/stacks-2.53/tests/: kmer_filter.t  process_radtags.t  pstacks.t  ustacks.t
(+1295 files in other folders)
