noinst_LIBRARIES = libhts.a
EXTREA_DIST = LICENCE NEWS

#plugin.c
#hfile_libcurl.c
#hfile_s3.c
#hfile_gcs.c
libhts_a_SOURCES = \
	bcf_sr_sort.c \
	bcf_sr_sort.h \
	bgzf.c \
	bgzip.c \
	cram/cram.h \
	cram/cram_codecs.c \
	cram/cram_codecs.h \
	cram/cram_decode.c \
	cram/cram_decode.h \
	cram/cram_encode.c \
	cram/cram_encode.h \
	cram/cram_external.c \
	cram/cram_index.c \
	cram/cram_index.h \
	cram/cram_io.c \
	cram/cram_io.h \
	cram/cram_samtools.c \
	cram/cram_samtools.h \
	cram/cram_stats.c \
	cram/cram_stats.h \
	cram/cram_structs.h \
	cram/files.c \
	cram/mFILE.c \
	cram/mFILE.h \
	cram/misc.h \
	cram/open_trace_file.c \
	cram/open_trace_file.h \
	cram/os.h \
	cram/pooled_alloc.c \
	cram/pooled_alloc.h \
	cram/rANS_byte.h \
	cram/rANS_static.c \
	cram/rANS_static.h \
	cram/sam_header.c \
	cram/sam_header.h \
	cram/string_alloc.c \
	cram/string_alloc.h \
	errmod.c \
	faidx.c \
	hfile.c \
	hfile_internal.h \
	hfile_net.c \
	hts.c \
	hts_internal.h \
	hts_os.c \
	htsfile.c \
	htslib/bgzf.h \
	htslib/cram.h \
	htslib/faidx.h \
	htslib/hfile.h \
	htslib/hts.h \
	htslib/hts_defs.h \
	htslib/hts_endian.h \
	htslib/hts_log.h \
	htslib/hts_os.h \
	htslib/kbitset.h \
	htslib/kfunc.h \
	htslib/khash.h \
	htslib/khash_str2int.h \
	htslib/klist.h \
	htslib/knetfile.h \
	htslib/kseq.h \
	htslib/ksort.h \
	htslib/kstring.h \
	htslib/regidx.h \
	htslib/sam.h \
	htslib/synced_bcf_reader.h \
	htslib/tbx.h \
	htslib/thread_pool.h \
	htslib/vcf.h \
	htslib/vcf_sweep.h \
	htslib/vcfutils.h \
	kfunc.c \
	knetfile.c \
	kstring.c \
	md5.c \
	multipart.c \
	os/lzma_stub.h \
	os/rand.c \
	probaln.c \
	realn.c \
	regidx.c \
	sam.c \
	synced_bcf_reader.c \
	tabix.c \
	tbx.c \
	textutils.c \
	textutils_internal.h \
	thread_pool.c \
	thread_pool_internal.h \
	vcf.c \
	vcf_sweep.c \
	vcfutils.c \
	version.h
